build_err.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/9.4.1/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
.\gradlew.bat : Problem in daemon expiration check
At line:1 char:78
+ ... .0.11.10-hotspot"; .\gradlew.bat compileJava --no-daemon 2>&1 | Out-F ...
+                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (Problem in daemon expiration check:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
org.gradle.internal.jvm.JavaHomeException: The supplied javaHome seems to be invalid. I cannot find the java 
executable. Tried location: C:\Program Files\Eclipse Adoptium\jdk-25.0.2.10-hotspot\bin\java.exe
	at org.gradle.internal.jvm.Jvm.findExecutable(Jvm.java:191)
	at org.gradle.internal.jvm.Jvm.getJavaExecutable(Jvm.java:216)
	at org.gradle.internal.jvm.Jvm.forHome(Jvm.java:119)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.jvmCompatible(DaemonCompatibilitySpec.java:93)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.whyUnsatisfied(DaemonCompatibilitySpec.java:43)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.isSatisfiedBy(DaemonCompatibilitySpec.java:38)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.isSatisfiedBy(DaemonCompatibilitySpec.java:28)
	at org.gradle.launcher.daemon.server.CompatibleDaemonExpirationStrategy.lambda$checkExpiration$0(CompatibleDaemonExpir
ationStrategy.java:48)
	at org.gradle.util.internal.CollectionUtils.filter(CollectionUtils.java:138)
	at org.gradle.util.internal.CollectionUtils.filter(CollectionUtils.java:111)
	at org.gradle.launcher.daemon.server.CompatibleDaemonExpirationStrategy.checkExpiration(CompatibleDaemonExpirationStra
tegy.java:47)
	at org.gradle.launcher.daemon.server.expiry.AllDaemonExpirationStrategy.checkExpiration(AllDaemonExpirationStrategy.ja
va:47)
	at org.gradle.launcher.daemon.server.expiry.AnyDaemonExpirationStrategy.checkExpiration(AnyDaemonExpirationStrategy.ja
va:44)
	at org.gradle.launcher.daemon.server.MasterExpirationStrategy.checkExpiration(MasterExpirationStrategy.java:80)
	at org.gradle.launcher.daemon.server.Daemon$DaemonExpirationPeriodicCheck.run(Daemon.java:273)
	at org.gradle.internal.concurrent.ExecutorPolicy$CatchAndRecordFailures.onExecute(ExecutorPolicy.java:64)
	at org.gradle.internal.concurrent.AbstractManagedExecutor$1.run(AbstractManagedExecutor.java:47)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:572)
	at java.base/java.util.concurrent.FutureTask.runAndReset(FutureTask.java:358)
	at java.base/java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run(ScheduledThreadPoolExecutor.java
:305)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
	at java.base/java.lang.Thread.run(Thread.java:1583)

> Configure project :
Fabric Loom: 1.12.7
Problem in daemon expiration check
org.gradle.internal.jvm.JavaHomeException: The supplied javaHome seems to be invalid. I cannot find the java 
executable. Tried location: C:\Program Files\Eclipse Adoptium\jdk-25.0.2.10-hotspot\bin\java.exe
	at org.gradle.internal.jvm.Jvm.findExecutable(Jvm.java:191)
	at org.gradle.internal.jvm.Jvm.getJavaExecutable(Jvm.java:216)
	at org.gradle.internal.jvm.Jvm.forHome(Jvm.java:119)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.jvmCompatible(DaemonCompatibilitySpec.java:93)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.whyUnsatisfied(DaemonCompatibilitySpec.java:43)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.isSatisfiedBy(DaemonCompatibilitySpec.java:38)
	at org.gradle.launcher.daemon.context.DaemonCompatibilitySpec.isSatisfiedBy(DaemonCompatibilitySpec.java:28)
	at org.gradle.launcher.daemon.server.CompatibleDaemonExpirationStrategy.lambda$checkExpiration$0(CompatibleDaemonExpir
ationStrategy.java:48)
	at org.gradle.util.internal.CollectionUtils.filter(CollectionUtils.java:138)
	at org.gradle.util.internal.CollectionUtils.filter(CollectionUtils.java:111)
	at org.gradle.launcher.daemon.server.CompatibleDaemonExpirationStrategy.checkExpiration(CompatibleDaemonExpirationStra
tegy.java:47)
	at org.gradle.launcher.daemon.server.expiry.AllDaemonExpirationStrategy.checkExpiration(AllDaemonExpirationStrategy.ja
va:47)
	at org.gradle.launcher.daemon.server.expiry.AnyDaemonExpirationStrategy.checkExpiration(AnyDaemonExpirationStrategy.ja
va:44)
	at org.gradle.launcher.daemon.server.MasterExpirationStrategy.checkExpiration(MasterExpirationStrategy.java:80)
	at org.gradle.launcher.daemon.server.Daemon$DaemonExpirationPeriodicCheck.run(Daemon.java:273)
	at org.gradle.internal.concurrent.ExecutorPolicy$CatchAndRecordFailures.onExecute(ExecutorPolicy.java:64)
	at org.gradle.internal.concurrent.AbstractManagedExecutor$1.run(AbstractManagedExecutor.java:47)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:572)
	at java.base/java.util.concurrent.FutureTask.runAndReset(FutureTask.java:358)
	at java.base/java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run(ScheduledThreadPoolExecutor.java
:305)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
	at java.base/java.lang.Thread.run(Thread.java:1583)

> Task :compileJava
E:\VulkShade\src\main\java\net\vulkanmod\vulkshade\render\VoxyLODManager.java:485: error: cannot find symbol
        ByteBuffer meshData;
        ^
  symbol:   class ByteBuffer
  location: class LODTile
E:\VulkShade\src\main\java\net\vulkanmod\vulkshade\render\VoxyLODManager.java:382: error: cannot find symbol
            buffer.addIndex(tile.meshIndices[i]);
                  ^
  symbol:   method addIndex(int)
  location: variable buffer of type BufferBuilder
2 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///E:/VulkShade/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  E:\VulkShade\src\main\java\net\vulkanmod\vulkshade\render\VoxyLODManager.java:485: error: cannot find symbol
          ByteBuffer meshData;
          ^
    symbol:   class ByteBuffer
    location: class LODTile
  E:\VulkShade\src\main\java\net\vulkanmod\vulkshade\render\VoxyLODManager.java:382: error: cannot find symbol
              buffer.addIndex(tile.meshIndices[i]);
                    ^
    symbol:   method addIndex(int)
    location: variable buffer of type BufferBuilder
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

1 actionable task: 1 executed
BUILD FAILED in 32s
